--- a/HTML & CSS/Typography in CSS/Exercises/08_Font-Awesome-Icons/styles.css
+++ b/HTML & CSS/Typography in CSS/Exercises/08_Font-Awesome-Icons/styles.css
@@ -70,3 +70,15 @@ ol.todo li {
     display: block;
     list-style: none outside;
 }
+
+ol.todo li:before {
+    display: inline-block;
+    content: '\f192';
+    font-family: "Font Awesome 6 Free";
+    margin-right: 0.5em;
+    opacity: 0.5;
+}
+
+ol.todo li.done::before {
+    content: '\f14a';
+}
